# xtensorExample

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-linux.yml  build-windows.yml
Example.01/: CMakeLists.txt  main.cpp
